Closed Bug 1590044 Opened 5 years ago Closed 5 years ago

Every time Browser Console is re-opened, its window size will be reduced.

Categories

(DevTools :: Console, defect, P3)

69 Branch
x86_64
Windows 10
defect

Tracking

(firefox-esr60 unaffected, firefox-esr68 unaffected, firefox69 wontfix, firefox70 wontfix, firefox71 verified, firefox72 verified)

VERIFIED FIXED
Firefox 72
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- unaffected
firefox69 --- wontfix
firefox70 --- wontfix
firefox71 --- verified
firefox72 --- verified

People

(Reporter: alice0775, Assigned: bdahl)

References

(Regression)

Details

(Keywords: nightly-community, regression)

Attachments

(2 files)

Reproducible: always

Steps to reproduce:

  1. Open Browser Console Ctrl+Shift+J

  2. Hit Ctrl++ for zoom 4-5 times

  3. Resize the Browser Console

  4. Remember the size of the Browser Console. And close the Browser Console

  5. Open Browser Console again Ctrl+Shift+J.

  6. Repeat step 4 and 5 at least more than 2-3 times.

Actual Results:
Every time Browser Console is re-opened, its window size will be reduced.

Expected Results:
It should be always the same size.

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=bc46a287b8988d259c0b926b8789af9e3b2d9b35&tochange=72e19189bb99e159b2974cbcda69647211962df3

Regressed by: 72e19189bb99e159b2974cbcda69647211962df3 Brendan Dahl — Bug 1552049 - Enable XUL persistence for all system privilege docs. r=smaug

Version: 71 Branch → 69 Branch
Attached file about:support
Priority: -- → P3
Assignee: nobody → bdahl
Status: NEW → ASSIGNED

I'm unable to reproduce locally, but I ran into a similar problem in the work to htmlify browser.xhtml and I have a fix for that. When the builds finish, can you test out them out to see if that fixes the issue for you? https://treeherder.mozilla.org/#/jobs?repo=try&revision=4a4ccab72275fe5b3c7902cd71e7144d0f1293d0&selectedJob=272861215

Flags: needinfo?(alice0775)

(In reply to Brendan Dahl [:bdahl] from comment #2)

I'm unable to reproduce locally, but I ran into a similar problem in the work to htmlify browser.xhtml and I have a fix for that. When the builds finish, can you test out them out to see if that fixes the issue for you? https://treeherder.mozilla.org/#/jobs?repo=try&revision=4a4ccab72275fe5b3c7902cd71e7144d0f1293d0&selectedJob=272861215

The try build does not fix the issue.
I can still reproduce the issue.

Flags: needinfo?(alice0775)

Screencast with STR of comment #0(step2 is not necessary): https://youtu.be/rgLjgn3wmU0

My apologies, the linked build was broken. I should have waited for tests to complete. Can you try this one instead:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=e4871390f02100a27e4b4f7846ba3df036099c94&selectedJob=272877493

Flags: needinfo?(alice0775)

(In reply to Brendan Dahl [:bdahl] from comment #5)

My apologies, the linked build was broken. I should have waited for tests to complete. Can you try this one instead:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=e4871390f02100a27e4b4f7846ba3df036099c94&selectedJob=272877493

The try build fixes the problem. The problem is no longer reproduced.

Flags: needinfo?(alice0775)

Attribute persistence for root elements should be handled by nsXULWindow,
not XULPersist. This was causing browser.xhtml with an <html> root to be
slightly smaller on each new window during the test
"open-features-non-integer-height.html."

Blocks: 1492582
Pushed by bdahl@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/2bbbcfea1b2c
Fix root HTML element attribute persistence. r=smaug
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 72

I can reproduce the issue on Nightly72.0a1(20191025164000).
And I can verify that the issue was fixed on latest Nightly72.0a1(20191026094546).

Status: RESOLVED → VERIFIED

Brendan, do you think that this is a good candidate for a beta uplift or can it ride the 72 train? Thanks

Flags: needinfo?(bdahl)

Comment on attachment 9104244 [details]
Bug 1590044 - Fix root HTML element attribute persistence. r=smaug

Beta/Release Uplift Approval Request

  • User impact if declined: browser console on windows gets smaller each time it is opened (windows only)
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: See comment #1 (though step #2 is not needed)
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Change that should only affect the browser console.
  • String changes made/needed:
Flags: needinfo?(bdahl)
Attachment #9104244 - Flags: approval-mozilla-beta?
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

Comment on attachment 9104244 [details]
Bug 1590044 - Fix root HTML element attribute persistence. r=smaug

Fix for a polish bug in devtools on windows, verified by our QA on nightly, uplift approved for 71 beta 6, thanks.

Attachment #9104244 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

I've reproduced the issue on Firefox Beta 70.0b5 (20191028110005)
Also verified it on Firefox Beta 70.0b6 (20191030153225) and it has been fixed.

QA Whiteboard: [qa-triaged]
Flags: qe-verify+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: