Bug 1590044 - Fix root HTML element attribute persistence. r=smaug a=pascalc

Attribute persistence for root elements should be handled by nsXULWindow,
not XULPersist. This was causing browser.xhtml with an <html> root to be
slightly smaller on each new window during the test
"open-features-non-integer-height.html."

Differential Revision: https://phabricator.services.mozilla.com/D50622

--HG--
extra : source : 2bbbcfea1b2ce90b76c4fd0ad222a1cafbe966bf